Adding source to image labels

--- a/analyzers/AbuseIPDB/Dockerfile
+++ b/analyzers/AbuseIPDB/Dockerfile
@@ -8,6 +8,7 @@ FROM python:3-alpine
 LABEL author="Matteo Lodi" \
       description="Determine whether an IP was reported or not as malicious by AbuseIPDB" \
       license="AGPL-v3" \
+      source="https://github.com/TheHive-Project/Cortex-Analyzers" \
       title="AbuseIPDB" \
       url="https://github.com/TheHive-Project/Cortex-Analyzers" \
       vendor="TheHive" \
