--- a/analyzers/CERTatPassiveDNS/Dockerfile
+++ b/analyzers/CERTatPassiveDNS/Dockerfile
@@ -8,6 +8,7 @@ FROM python:3-alpine
 LABEL author="Nils Kuhnert, CERT-Bund" \
       description="Checks CERT.at Passive DNS for a given domain." \
       license="AGPL-V3" \
+      source="https://github.com/TheHive-Project/Cortex-Analyzers" \
       title="CERTatPassiveDNS" \
       url="https://github.com/BSI-CERT-Bund/cortex-analyzers" \
       vendor="TheHive" \
