--- a/analyzers/Censys/Dockerfile
+++ b/analyzers/Censys/Dockerfile
@@ -8,6 +8,7 @@ FROM python:3-alpine
 LABEL author="Nils Kuhnert, CERT-Bund" \
       description="Check IPs, certificate hashes or domains against censys.io." \
       license="AGPL-V3" \
+      source="https://github.com/TheHive-Project/Cortex-Analyzers" \
       title="Censys" \
       url="https://github.com/BSI-CERT-Bund/censys-analyzer" \
       vendor="TheHive" \
