--- a/analyzers/DNSSinkhole/Dockerfile
+++ b/analyzers/DNSSinkhole/Dockerfile
@@ -8,6 +8,7 @@ FROM python:3-alpine
 LABEL author="Andrea Garavaglia, LDO-CERT" \
       description="Check if a  domain is sinkholed via DNS Sinkhole server" \
       license="AGPL-V3" \
+      source="https://github.com/TheHive-Project/Cortex-Analyzers" \
       title="DNSSinkhole" \
       url="https://github.com/LDO-CERT/cortex-analyzer" \
       vendor="TheHive" \
