--- a/analyzers/HybridAnalysis/Dockerfile
+++ b/analyzers/HybridAnalysis/Dockerfile
@@ -8,6 +8,7 @@ FROM python:3-alpine
 LABEL author="Daniil Yugoslavskiy, Tieto" \
       description="Fetch Hybrid Analysis reports associated with hashes and filenames." \
       license="AGPL-V3" \
+      source="https://github.com/TheHive-Project/Cortex-Analyzers" \
       title="HybridAnalysis" \
       url="https://github.com/TheHive-Project/Cortex-Analyzers" \
       vendor="TheHive" \
