--- a/analyzers/MISPWarningLists/Dockerfile
+++ b/analyzers/MISPWarningLists/Dockerfile
@@ -8,6 +8,7 @@ FROM python:3-alpine
 LABEL author="Nils Kuhnert, CERT-Bund" \
       description="Check IoCs/Observables against MISP Warninglists to filter false positives." \
       license="AGPL-V3" \
+      source="https://github.com/TheHive-Project/Cortex-Analyzers" \
       title="MISPWarningLists" \
       url="https://github.com/BSI-CERT-Bund/misp-warninglists-analyzer" \
       vendor="TheHive" \
