--- a/analyzers/Malpedia/Dockerfile
+++ b/analyzers/Malpedia/Dockerfile
@@ -10,6 +10,7 @@ RUN apk add --no-cache gcc musl-dev
 LABEL author="Davide Arcuri and Andrea Garavaglia, LDO-CERT" \
       description="Check files against Malpedia YARA rules." \
       license="AGPL-V3" \
+      source="https://github.com/TheHive-Project/Cortex-Analyzers" \
       title="Malpedia" \
       url="https://github.com/LDO-CERT/cortex-analyzers" \
       vendor="TheHive" \
