--- a/analyzers/MaxMind/Dockerfile
+++ b/analyzers/MaxMind/Dockerfile
@@ -8,6 +8,7 @@ FROM python:3-alpine
 LABEL author="CERT-BDF" \
       description="Use MaxMind to geolocate an IP address." \
       license="AGPL-V3" \
+      source="https://github.com/TheHive-Project/Cortex-Analyzers" \
       title="MaxMind" \
       url="https://github.com/TheHive-Project/Cortex-Analyzers" \
       vendor="TheHive" \
