--- a/analyzers/MetaDefender/Dockerfile
+++ b/analyzers/MetaDefender/Dockerfile
@@ -7,6 +7,7 @@ FROM python:3-alpine
 
 LABEL author="Davide Arcuri and Andrea Garavaglia, LDO-CERT" \
       license="AGPL-V3" \
+      source="https://github.com/TheHive-Project/Cortex-Analyzers" \
       title="MetaDefender" \
       url="https://github.com/TheHive-Project/Cortex-Analyzers" \
       vendor="TheHive" \
