--- a/analyzers/Nessus/Dockerfile
+++ b/analyzers/Nessus/Dockerfile
@@ -8,6 +8,7 @@ FROM python:3-alpine
 LABEL author="Guillaume Rousse" \
       description="Use Nessus Professional to scan hosts." \
       license="AGPL-V3" \
+      source="https://github.com/TheHive-Project/Cortex-Analyzers" \
       title="Nessus" \
       url="https://github.com/TheHive-Project/Cortex-Analyzers" \
       vendor="TheHive" \
