--- a/analyzers/OTXQuery/Dockerfile
+++ b/analyzers/OTXQuery/Dockerfile
@@ -8,6 +8,7 @@ FROM python:3-alpine
 LABEL author="Eric Capuano" \
       description="Query AlienVault OTX for IPs, domains, URLs, or file hashes." \
       license="AGPL-V3" \
+      source="https://github.com/TheHive-Project/Cortex-Analyzers" \
       title="OTXQuery" \
       url="https://github.com/TheHive-Project/Cortex-Analyzers" \
       vendor="TheHive" \
