--- a/analyzers/Patrowl/Dockerfile
+++ b/analyzers/Patrowl/Dockerfile
@@ -8,6 +8,7 @@ FROM python:3-alpine
 LABEL author="Nicolas Mattiocco" \
       description="Get the current Patrowl report for a fdqn, a domain or an IP address." \
       license="AGPL-V3" \
+      source="https://github.com/TheHive-Project/Cortex-Analyzers" \
       title="Patrowl" \
       url="https://github.com/TheHive-Project/Cortex-Analyzers" \
       vendor="TheHive" \
