--- a/analyzers/ProofPoint/Dockerfile
+++ b/analyzers/ProofPoint/Dockerfile
@@ -8,6 +8,7 @@ FROM python:3-alpine
 LABEL author="Emmanuel Torquato" \
       description="Check URL, file, SHA256 against ProofPoint forensics" \
       license="AGPL-V3" \
+      source="https://github.com/TheHive-Project/Cortex-Analyzers" \
       title="ProofPoint" \
       url="https://github.com/CERT-BDF/Cortex-Analyzers" \
       vendor="TheHive" \
