--- a/analyzers/TalosReputation/Dockerfile
+++ b/analyzers/TalosReputation/Dockerfile
@@ -8,6 +8,7 @@ FROM python:3-alpine
 LABEL author="Gabriel Antonio da Silva" \
       description="Get the Talos IP reputation" \
       license="AGPL-V3" \
+      source="https://github.com/TheHive-Project/Cortex-Analyzers" \
       title="TalosReputation" \
       url="https://github.com/TheHive-Project/Cortex-Analyzers" \
       vendor="TheHive" \
