--- a/analyzers/TeamCymruMHR/Dockerfile
+++ b/analyzers/TeamCymruMHR/Dockerfile
@@ -8,6 +8,7 @@ FROM python:3-alpine
 LABEL author="Wes Lambert" \
       description="Submit hash to Team Cymru's Malware Hash Registry" \
       license="AGPL-V3" \
+      source="https://github.com/TheHive-Project/Cortex-Analyzers" \
       title="TeamCymruMHR" \
       url="https://github.com/TheHive-Project/Cortex-Analyzers" \
       vendor="TheHive" \
