--- a/analyzers/Threatcrowd/Dockerfile
+++ b/analyzers/Threatcrowd/Dockerfile
@@ -8,6 +8,7 @@ FROM python:3-alpine
 LABEL author="Rémi Allain, Cyberprotect" \
       description="Look up domains, mail and IP addresses on ThreatCrowd." \
       license="AGPL-V3" \
+      source="https://github.com/TheHive-Project/Cortex-Analyzers" \
       title="Threatcrowd" \
       url="https://github.com/Cyberprotect/Cortex-Analyzers" \
       vendor="TheHive" \
