--- a/analyzers/TorProject/Dockerfile
+++ b/analyzers/TorProject/Dockerfile
@@ -8,6 +8,7 @@ FROM python:3-alpine
 LABEL author="Marc-André DOLL, STARC by EXAPROBE" \
       description="Query https://check.torproject.org/exit-addresses for TOR exit nodes IP addresses." \
       license="AGPL-V3" \
+      source="https://github.com/TheHive-Project/Cortex-Analyzers" \
       title="TorProject" \
       url="https://github.com/TheHive-Project/Cortex-Analyzers" \
       vendor="TheHive" \
