--- a/analyzers/Umbrella/Dockerfile
+++ b/analyzers/Umbrella/Dockerfile
@@ -8,6 +8,7 @@ FROM python:3-alpine
 LABEL author="Kyle Parrish" \
       description="Query the Umbrella Reporting API for recent DNS queries and their status." \
       license="AGPL-V3" \
+      source="https://github.com/TheHive-Project/Cortex-Analyzers" \
       title="Umbrella" \
       url="https://github.com/arnydo/thehive/Cortex-Analyzers" \
       vendor="TheHive" \
