--- a/analyzers/Cyberprotect/Dockerfile
+++ b/analyzers/Cyberprotect/Dockerfile
@@ -8,6 +8,7 @@ FROM python:3-alpine
 LABEL author="Rémi Allain, Cyberprotect" \
       description="ThreatScore is a cyber threat scoring system provided by Cyberprotect" \
       license="AGPL-V3" \
+      source="https://github.com/TheHive-Project/Cortex-Analyzers" \
       title="Cyberprotect" \
       url="https://github.com/Cyberprotect/Cortex-Analyzers" \
       vendor="TheHive" \
