--- a/analyzers/Fortiguard/Dockerfile
+++ b/analyzers/Fortiguard/Dockerfile
@@ -8,6 +8,7 @@ FROM python:3-alpine
 LABEL author="Eric Capuano" \
       description="Check the Fortiguard category of a URL, FQDN or a domain. Check the full available list at https://fortiguard.com/webfilter/categories" \
       license="AGPL-V3" \
+      source="https://github.com/TheHive-Project/Cortex-Analyzers" \
       title="Fortiguard" \
       url="https://github.com/TheHive-Project/Cortex-Analyzers" \
       vendor="TheHive" \
