--- a/analyzers/PhishTank/Dockerfile
+++ b/analyzers/PhishTank/Dockerfile
@@ -8,6 +8,7 @@ FROM python:3-alpine
 LABEL author="Eric Capuano" \
       description="Use PhishTank to check if a URL is a verified phishing site." \
       license="AGPL-V3" \
+      source="https://github.com/TheHive-Project/Cortex-Analyzers" \
       title="PhishTank" \
       url="https://github.com/TheHive-Project/Cortex-Analyzers" \
       vendor="TheHive" \
