--- a/analyzers/Pulsedive/Dockerfile
+++ b/analyzers/Pulsedive/Dockerfile
@@ -8,6 +8,7 @@ FROM python:3-alpine
 LABEL author="Nils Kuhnert" \
       description="Search Pulsedive.com for a giver domain name, hash, ip or url" \
       license="AGPL-V3" \
+      source="https://github.com/TheHive-Project/Cortex-Analyzers" \
       title="Pulsedive" \
       url="https://github.com/TheHive-Project/Cortex-Analyzers" \
       vendor="TheHive" \
