--- a/analyzers/WOT/Dockerfile
+++ b/analyzers/WOT/Dockerfile
@@ -8,6 +8,7 @@ FROM python:3-alpine
 LABEL author="Andrea Garavaglia, LDO-CERT" \
       description="Use Web of Trust to check a domain's reputation." \
       license="AGPL-V3" \
+      source="https://github.com/TheHive-Project/Cortex-Analyzers" \
       title="WOT" \
       url="https://github.com/garanews/Cortex-Analyzers" \
       vendor="TheHive" \
